--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,10 @@
 	<name>MohiMine</name>
 	<repositories>
 		<repository>
+            <id>nukkitx-repo</id>
+            <url>https://repo.nukkitx.com/snapshot/</url>
+        </repository>
+		<repository>
 			<id>mengcraft</id>
 			<url>http://ci.mengcraft.com:8080/plugin/repository/everything/</url>
 		</repository>
